# agent-skills

./: .gitignore  CHANGELOG.md  MIGRATION.md  Makefile  README.md  README_ko.md  agt.toml  install.cmd  install.ps1  install.sh  package-lock.json  package.json  profiles.yml  setup.sh
.github/workflows/: release-agt.yml  release.yml
agents/background-implementer/: SKILL.md
agents/background-planner/: SKILL.md
agt/: Cargo.toml
agt/src/: main.rs  util.rs
agt/src/cmd/: mod.rs  persona.rs  run.rs  skill.rs
agt/src/config/: mod.rs  paths.rs  profiles.rs
agt/src/frontmatter/: parser.rs
agt/src/llm/: detect.rs  invoke.rs  mod.rs
agt/src/remote/: github.rs
agt/src/ui/: interactive.rs  mod.rs
cli/: README.md  agent-persona  agent-skill  claude-skill
codex-support/: AGENTS.md
context-manager/: SKILL.md
git-commit-pr/: SKILL.md
hooks/: README.md  english-coach.sh  hooks.json  prompt-logger.sh  settings.json.template
npm/: package.json
personas/: README.md  ai-llm-reviewer.md  api-dx-reviewer.md  data-engineering-reviewer.md  delivery-risk-planner.md  observability-reviewer.md  performance-reviewer.md  privacy-reviewer.md  product-manager-reviewer.md  product-planner.md  security-reviewer.md  sns-content-strategist.md  technical-planner.md  testing-reviewer.md  도도한-키위새.md  안태우.md
proposal-analyzer/: SKILL.md
static/: CONTEXT.md  CONTEXT.sample.md  IAC.md  IAC.sample.md  NOTION.md  NOTION.sample.md  NOTION.sample.yaml  OBSIDIAN.md  OBSIDIAN.sample.md  README.md  SECURITY.sample.md  SERVICES.sample.md  VAULT.sample.md  WHOAMI.sample.md
(+306 files in other folders)
