[package]
name = "agt"
version = "2026.2.19"
edition = "2021"
description = "agt — A modular toolkit for extending AI coding agents"
license = "MIT"
repository = "https://github.com/open330/agt"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
ureq = "2"
flate2 = "1"
tar = "0.4"
colored = "2"
dirs = "5"
anyhow = "1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
